best_try_and_best_chance

--- a/html/frontend/n_vue-js.html
+++ b/html/frontend/n_vue-js.html
@@ -23,7 +23,7 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#org00dc79b">1. MVC / MVP / M-V-VM</a></li>
-<li><a href="#org1424a28">2. Vue.js</a>
+<li><a href="#org3ec254a">2. 实例</a>
 <ul>
 <li><a href="#org631cf42">2.1. 简介</a></li>
 <li><a href="#orgdf59bfa">2.2. 指令模板 (View)</a>
@@ -36,7 +36,7 @@
 <li><a href="#org8cacf2e">2.2.6. 表单绑定 (v-model，双向绑定)</a></li>
 </ul>
 </li>
-<li><a href="#orgfebda91">2.3. VM 实例</a>
+<li><a href="#orgdfed8a8">2.3. VM 实例 (Model)</a>
 <ul>
 <li><a href="#orga21e8c0">2.3.1. 生命周期的钩子</a></li>
 </ul>
@@ -136,8 +136,8 @@
 </div>
 </section>
 
-<section id="outline-container-org1424a28" class="outline-2">
-<h2 id="org1424a28"><span class="section-number-2">2.</span> Vue.js</h2>
+<section id="outline-container-org3ec254a" class="outline-2">
+<h2 id="org3ec254a"><span class="section-number-2">2.</span> 实例</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 <div id="outline-container-org631cf42" class="outline-3">
@@ -602,8 +602,8 @@ watch: <span style="color: #000000;">{</span>
 </div>
 </div>
 
-<div id="outline-container-orgfebda91" class="outline-3">
-<h3 id="orgfebda91"><span class="section-number-3">2.3.</span> VM 实例</h3>
+<div id="outline-container-orgdfed8a8" class="outline-3">
+<h3 id="orgdfed8a8"><span class="section-number-3">2.3.</span> VM 实例 (Model)</h3>
 <div class="outline-text-3" id="text-2-3">
 </div>
 <div id="outline-container-orga21e8c0" class="outline-4">
@@ -1086,7 +1086,7 @@ data.js 用于提供共享数据:
 </pre>
 </div>
 
-<pre class="example" id="org84658ea">
+<pre class="example" id="org98ad54f">
 database   --- state
 
 dao        --- mutation
@@ -1735,7 +1735,7 @@ vue.config.js:
 </p>
 
 
-<figure id="orgc9731da">
+<figure id="orgf20d3cf">
 <img src="img/oimg_20201104_064733.png" alt="oimg_20201104_064733.png" width="300px">
 
 </figure>
@@ -2594,7 +2594,7 @@ npm run serve                <span style="color: #595959;"># </span><span style=
 为什么会有如下错误:
 </p>
 
-<pre class="example" id="orge2e16e3">
+<pre class="example" id="org76844ab">
 Access to XMLHttpRequest at 'http://localhost:9999/server_comment_list_war_exploded/comments' from origin 'http://localhost:8080' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
 </pre>
 
