best_try_and_best_chance

--- a/html/111/notes.html
+++ b/html/111/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-02-20 -->
+<!-- 2023-03-14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Tips</title>
@@ -24,6 +24,11 @@
 <ul>
 <li><a href="#org5d05e26">1. Ungrouped</a></li>
 <li><a href="#org67c4dd0">2. ASP.NET Demo Projects</a></li>
+<li><a href="#org35dacd6">3. 2023</a>
+<ul>
+<li><a href="#org5fa33bf">3.1. 2023-03-14 Tue</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </nav>
@@ -47,10 +52,28 @@ Just do it.
 </ul>
 </div>
 </section>
+
+<section id="outline-container-org35dacd6" class="outline-2">
+<h2 id="org35dacd6"><span class="section-number-2">3.</span> 2023</h2>
+<div class="outline-text-2" id="text-3">
+</div>
+<div id="outline-container-org5fa33bf" class="outline-3">
+<h3 id="org5fa33bf"><span class="section-number-3">3.1.</span> 2023-03-14 Tue</h3>
+<div class="outline-text-3" id="text-3-1">
+<p>
+&#x2014; 10:38:48 &#x2014;
+</p>
+
+<p>
+张豪就业。嵌入式开发。
+</p>
+</div>
+</div>
+</section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-02-20</p>
+<p class="date">Created: 2023-03-14</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
