best_try_and_best_chance

--- a/html/frontend/n_vue-js.html
+++ b/html/frontend/n_vue-js.html
@@ -1107,7 +1107,7 @@ data.js 用于提供共享数据:
 </pre>
 </div>
 
-<pre class="example" id="org88b1eaa">
+<pre class="example" id="org85337f9">
 database   --- state
 
 dao        --- mutation
@@ -1602,8 +1602,8 @@ vue.config.js:
 </p>
 <div class="org-src-container">
 <pre class="src src-shell"><span style="color: #8f0075;">cd</span> &#20320;&#30340;&#30446;&#26631;&#30446;&#24405;
-npm create vue@3  <span style="color: #595959;"># </span><span style="color: #595959;">or</span>
-npm init vue@latest
+npm init vue@latest <span style="color: #595959;"># </span><span style="color: #595959;">or</span>
+npm create vue@latest
 </pre>
 </div>
 
@@ -1817,7 +1817,7 @@ npm run dev
 </p>
 
 
-<figure id="org9e6b82f">
+<figure id="org7040989">
 <img src="img/oimg_20201104_064733.png" alt="oimg_20201104_064733.png" width="300px">
 
 </figure>
@@ -2676,7 +2676,7 @@ npm run serve                <span style="color: #595959;"># </span><span style=
 为什么会有如下错误:
 </p>
 
-<pre class="example" id="org938c764">
+<pre class="example" id="org621c9a0">
 Access to XMLHttpRequest at 'http://localhost:9999/server_comment_list_war_exploded/comments' from origin 'http://localhost:8080' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
 </pre>
 
