best_try_and_best_chance

--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-03-15 -->
+<!-- 2023-03-16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap for project _notes_yao63</title>
@@ -42,6 +42,7 @@
 <li>frontend
 <ul class="org-ul">
 <li><a href="frontend/0-http.html">HTTP</a></li>
+<li><a href="frontend/1-browser.html">浏览器</a></li>
 <li><a href="frontend/2-javascript.html">JavaScript</a></li>
 <li><a href="frontend/a-html+css.html">HTML/CSS</a></li>
 <li><a href="frontend/a_html5+css3.html">HTML5 and CSS3</a></li>
@@ -62,7 +63,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-03-15</p>
+<p class="date">Created: 2023-03-16</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
