best_try_and_best_chance

--- a/html/frontend/1-browser.html
+++ b/html/frontend/1-browser.html
@@ -79,9 +79,9 @@
 <p>
 错误信息:
 </p>
-<pre class="example" id="org602578f">
-Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin 'http://127.0.0.1:5173' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.
-</pre>
+<p class="verse">
+Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin 'http://127.0.0.1:5173' has been blocked by CORS policy: No 'Access-Control-Allow-Origin' header is present on the requested resource.<br>
+</p>
 
 <p>
 方案:
