best_try_and_best_chance

--- a/html/frontend/1-browser.html
+++ b/html/frontend/1-browser.html
@@ -84,7 +84,7 @@ Access to XMLHttpRequest at 'https://localhost:7062/WeatherForecast' from origin
 </p>
 
 <p>
-方案:
+如果想要跨域发送 ajax 请求，成熟的方案:
 </p>
 <ul class="org-ul">
 <li>JSONP (使用钻空子的方式，强行跨域)</li>
