--- a/html/111/git.html
+++ b/html/111/git.html
@@ -98,6 +98,12 @@ VIM 分不同模式:
 <section id="outline-container-orgc407e36" class="outline-2">
 <h2 id="orgc407e36"><span class="section-number-2">3.</span> Git 常用命令</h2>
 <div class="outline-text-2" id="text-3">
+
+<figure id="org9a6dc79">
+<img src="img/oimg_20230329_101015.png" alt="oimg_20230329_101015.png">
+
+</figure>
+
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #595959;"># </span><span style="color: #595959;">&#21021;&#22987;&#21270;&#20179;&#24211;</span>
 git init
