--- a/html/111/git.html
+++ b/html/111/git.html
@@ -99,10 +99,18 @@ VIM 分不同模式:
 <h2 id="orgc407e36"><span class="section-number-2">3.</span> Git 常用命令</h2>
 <div class="outline-text-2" id="text-3">
 
-<figure id="org9a6dc79">
+<figure id="orgeefbb68">
 <img src="img/oimg_20230329_101015.png" alt="oimg_20230329_101015.png">
 
 </figure>
+
+
+
+<figure id="orgd2b91a0">
+<img src="img/oimg_20230329_101156.png" alt="oimg_20230329_101156.png">
+
+</figure>
+
 
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #595959;"># </span><span style="color: #595959;">&#21021;&#22987;&#21270;&#20179;&#24211;</span>
