best_try_and_best_chance

--- a/html/111/git.html
+++ b/html/111/git.html
@@ -99,14 +99,14 @@ VIM 分不同模式:
 <h2 id="orgc407e36"><span class="section-number-2">3.</span> Git 常用命令</h2>
 <div class="outline-text-2" id="text-3">
 
-<figure id="orgeefbb68">
-<img src="img/oimg_20230329_101015.png" alt="oimg_20230329_101015.png">
+<figure id="org08bd756">
+<img src="img/oimg_20230329_101015.png" alt="oimg_20230329_101015.png" width="500">
 
 </figure>
 
 
 
-<figure id="orgd2b91a0">
+<figure id="orge801ce2">
 <img src="img/oimg_20230329_101156.png" alt="oimg_20230329_101156.png">
 
 </figure>
