best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-03-29 -->
+<!-- 2023-08-30 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>173.NET</title>
@@ -40,56 +40,12 @@
 
 <section id="toc">
 
-<h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<ul class="org-ul">
-<li>什么是盒子模型、文档流？如何进行页面布局？</li>
-<li>总结整理 Flexbox 的使用</li>
-<li>什么是 CDN？其原理？其优点缺点？有哪些？</li>
-<li>了解 Bootstrap 的实现原理，掌握 Bootstrap 的基本使用。做好笔记和总结</li>
-</ul>
-
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
-<li>111
-<ul class="org-ul">
-<li><a href="111/git.html">GIT/Linux</a></li>
-<li><a href="111/notes.html">Tips</a></li>
-<li><a href="111/tasks.html">任务和作业</a></li>
-<li><a href="111/words.html">English</a></li>
-</ul></li>
-<li>database
-<ul class="org-ul">
-<li><a href="database/1-sqlserver.html">SqlServer</a></li>
-<li><a href="database/2-mysql.html">MySQL</a></li>
-<li><a href="database/5-nosql.html">NoSQL</a></li>
-</ul></li>
 <li>dotnet
 <ul class="org-ul">
-<li><a href="dotnet/0-csharp.html">C♯</a></li>
-<li><a href="dotnet/4-winform.html">Winform</a></li>
-<li><a href="dotnet/5-aspnet.html">ASP.NET</a></li>
-<li><a href="dotnet/7-ef.html">Entity Framework</a></li>
-</ul></li>
-<li>frontend
-<ul class="org-ul">
-<li><a href="frontend/0-http.html">HTTP</a></li>
-<li><a href="frontend/1-browser.html">浏览器</a></li>
-<li><a href="frontend/2-javascript.html">JavaScript</a></li>
-<li><a href="frontend/a-html+css.html">HTML/CSS</a></li>
-<li><a href="frontend/a_html5+css3.html">HTML5 and CSS3</a></li>
-<li><a href="frontend/c_js.html">JavaScript (ECMAScript)</a></li>
-<li><a href="frontend/d_bom.html">BOM (浏览器对象模型)</a></li>
-<li><a href="frontend/e_dom.html">DOM (文档对象模型)</a></li>
-<li><a href="frontend/h_jQuery.html">jQuery</a></li>
-<li><a href="frontend/n_vue-js.html">Vue.js</a></li>
-<li><a href="frontend/w_nodejs.html">Node.js</a></li>
-<li><a href="frontend/z-openapi.html">OpenAPI/Swagger</a></li>
-</ul></li>
-<li>miscellaneous
-<ul class="org-ul">
-<li><a href="miscellaneous/misc.html">其他</a></li>
-<li><a href="miscellaneous/skills.html">每天很多小技巧</a></li>
+<li><a href="dotnet/1-csharp.html">1-csharp</a></li>
 </ul></li>
 </ul>
 </div>
@@ -97,9 +53,6 @@
 <div><br>
 <h3>其他链接</h3>
 <ul>
-<li><a href="/luping">录屏视频 (/luping)</a></li>
-<li><a href="/assets">素材资料 (/assets)</a></li>
-<li><a href="/tools">软件工具 (/tools)</a></li>
 
 </ul>
 </div>
@@ -107,77 +60,14 @@
 </section>
 
 <aside>
-<ol class="org-ol">
-<li>欧阳华健
-<ul class="org-ul">
-<li>陈智源</li>
-<li>欧阳轩</li>
-<li>陈展群</li>
-</ul></li>
 
-<li>张豪
-<ul class="org-ul">
-<li>黎文鑫</li>
-<li>高雁</li>
-<li>唐海</li>
-<li>钟宇杨</li>
-</ul></li>
-
-<li>彭邦栋
-<ul class="org-ul">
-<li>周晓乐</li>
-<li>黄远坤</li>
-<li>卢传君</li>
-<li>李晓辉</li>
-</ul></li>
-
-<li>陈永旺
-<ul class="org-ul">
-<li>薛有彬</li>
-<li>李学文</li>
-<li>李天娇</li>
-<li>梁恩宁</li>
-</ul></li>
-
-<li>秦汉
-<ul class="org-ul">
-<li>蔡正旺</li>
-<li>吴标</li>
-</ul></li>
-
-<li>郭松鹏
-<ul class="org-ul">
-<li>黎绍伟</li>
-<li>郑钧洹</li>
-<li>唐迪</li>
-<li>刘少钦</li>
-</ul></li>
-
-<li>杨正进
-<ul class="org-ul">
-<li>韩先午</li>
-<li>覃秋菊</li>
-<li>李远源</li>
-<li>黄必旺</li>
-</ul></li>
-</ol>
-
-<p>
-网课分组
-</p>
-<ul class="org-ul">
-<li>[韩先午] 薛有彬 梁恩宁 吴标 郭松鹏 刘少钦 黄必旺 李远源</li>
-<li>[陈智源] 陈展群 张豪 黎文鑫 高雁 唐海 钟宇杨 黎绍伟</li>
-<li>[覃秋菊] 陈永旺 李天娇 彭邦栋 杨正进 郑钧洹 唐迪 蔡正旺</li>
-<li>[李学文] 欧阳华健 欧阳轩 周晓乐 黄远坤 卢传君 秦汉 李晓辉</li>
-</ul>
 </aside>
 
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-03-29</p>
+<p class="date">Created: 2023-08-30</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
