best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -28,13 +28,14 @@
 #main aside > ol { display: flex; flex-flow: row wrap; width: 368px; box-shadow: 0 0 10px #eee; padding: 20px 0 20px 20px; margin-top: -4em; }
 #main aside > ol > li { margin-bottom: 1em; width: 150px; }
 }
+.title {color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体}
 </style>
 </head>
 <body>
 <div id="content" class="content">
 <header>
 <h1 class="title">173.NET</h1>
-</header><h3 style="color: red; font-weight: normal; font-size: 1.8em; text-shadow: 0 0 1px #ee0000; font-family: 楷体">就业季 (明确方向，做好准备)</h3>
+</header><h3 class="title">Happy Coding</h3>
 
 <div id="main">
 
