best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -20,12 +20,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc5e04f6">1. C♯ 语言</a></li>
+<li><a href="#orgafb619b">1. C♯ 语言</a></li>
 </ul>
 </div>
 </nav>
-<section id="outline-container-orgc5e04f6" class="outline-2">
-<h2 id="orgc5e04f6"><span class="section-number-2">1.</span> C♯ 语言</h2>
+<section id="outline-container-orgafb619b" class="outline-2">
+<h2 id="orgafb619b"><span class="section-number-2">1.</span> C♯ 语言</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 222
