--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -19,7 +19,7 @@
 <header>
 <h1 class="title">Sitemap for project _notes_yao63</h1>
 </header><ul class="org-ul">
-<li><a href="index.html">173.NET</a></li>
+<li><a href="index.html">AIT.NET</a></li>
 <li>dotnet
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
