best_try_and_best_chance

--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -24,6 +24,10 @@
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
 </ul></li>
+<li>skills
+<ul class="org-ul">
+<li><a href="skills/windows.html">Windows</a></li>
+</ul></li>
 </ul>
 </div>
 <div id="postamble" class="status">
