--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,10 @@
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
 </ul></li>
+<li>skills
+<ul class="org-ul">
+<li><a href="skills/windows.html">Windows</a></li>
+</ul></li>
 </ul>
 </div>
 
