--- a/html/skills/windows.html
+++ b/html/skills/windows.html
@@ -69,7 +69,30 @@
 <ul class="org-ul">
 <li>敲入命令，然后敲回车执行</li>
 <li>命令类似 <code>cp a b</code> 这样的格式，使用空格分割，第一部分 (<code>cp</code>) 是命令程序，其他部分是参数。参数可以有 0 个或多个</li>
+<li>如果敲入命令 (比如 <code>csc</code>) 然后按回车，命令提示符将会去寻找相应的可执行文件去执行 (<code>csc.exe</code>)。其寻找逻辑如下:
+<ul class="org-ul">
+<li>如果当前文件夹下有 <code>csc.exe</code>, 那么 csc 代表的就是当前文件夹下的 <code>csc.exe</code></li>
+<li>如果当前文件夹下没有 <code>csc.exe</code> 文件，那么会在【PATH 环境变量】里配置的文件夹中依次寻找，并使用第一个找到的</li>
+<li>如果还是没找到，则显示 <code>xxx 不是内部或外部命令，也不是可运行的程序或批处理文件</code></li>
+<li>当然，也可以在命令提示符下，输入完整的可执行文件的路径去显式执行程序</li>
+</ul></li>
 </ul>
+
+<p>
+因此，如果在命令提示符下，输入 csc 后显示不是内部命令，则可以:
+</p>
+<ol class="org-ol">
+<li>使用完整路径去调用 csc.exe 程序，比如 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe hello.txt</code></li>
+<li>配置【PATH 环境变量】，在其中增加 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319</code> 文件夹</li>
+</ol>
+
+<p>
+配置 PATH 环境变量的方式:
+</p>
+<ol class="org-ol">
+<li>【我的电脑】-【属性】-【高级系统设置】-【环境变量&#x2026;】</li>
+<li>找到【Path】条目，通过添加，将文件夹 (比如 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319</code>) 添加到其中</li>
+</ol>
 </div>
 </section>
 </div>
