best_try_and_best_chance

--- a/html/skills/windows.html
+++ b/html/skills/windows.html
@@ -87,11 +87,12 @@
 </ol>
 
 <p>
-配置 PATH 环境变量的方式:
+[例子] 通过配置 PATH 环境变量简化 csc 命令的使用:
 </p>
 <ol class="org-ol">
-<li>【我的电脑】-【属性】-【高级系统设置】-【环境变量&#x2026;】</li>
-<li>找到【Path】条目，通过添加，将文件夹 (比如 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319</code>) 添加到其中</li>
+<li>打开【我的电脑】-【属性】-【高级系统设置】-【环境变量&#x2026;】</li>
+<li>找到【Path】条目，通过添加，将文件夹 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319</code> 添加到其中</li>
+<li>然后打开的任意命令提示符下，你就可以直接调用 <code>csc</code> 命令，而不需要输入完整路径了</li>
 </ol>
 </div>
 </section>
