best_try_and_best_chance

--- a/html/skills/windows.html
+++ b/html/skills/windows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-08-30 -->
+<!-- 2023-08-31 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Windows</title>
@@ -94,12 +94,23 @@
 <li>找到【Path】条目，通过添加，将文件夹 <code>C:\Windows\Microsoft.NET\Framework64\v4.0.30319</code> 添加到其中</li>
 <li>然后打开的任意命令提示符下，你就可以直接调用 <code>csc</code> 命令，而不需要输入完整路径了</li>
 </ol>
+
+<p>
+常用命令:
+</p>
+<ul class="org-ul">
+<li><code>dir</code>, 用来列出当前工作目录中的内容, dir 是 Directory 的缩写, 即文件夹</li>
+<li><code>cd 文件夹路径</code>, 用来将当前工作目录切换到某个文件夹, cd 是 Change Directory 的缩写, 其中 <code>cd ..</code> 表示切换到上一层文件夹</li>
+<li><code>del 文件名</code>, 用来删除文件, del 是 delete 的缩写，即删除</li>
+<li><code>ping 8.8.8.8</code>, 用来测试是否能正常上网</li>
+<li><code>ipconfig</code>, 用来显示当前电脑的 IP 信息</li>
+</ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-08-30</p>
+<p class="date">Created: 2023-08-31</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
