best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-08-30 -->
+<!-- 2023-09-05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -20,12 +20,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8807467">1. C♯ 语言</a></li>
+<li><a href="#org0b5732f">1. C♯ 语言</a></li>
 </ul>
 </div>
 </nav>
-<section id="outline-container-org8807467" class="outline-2">
-<h2 id="org8807467"><span class="section-number-2">1.</span> C♯ 语言</h2>
+<section id="outline-container-org0b5732f" class="outline-2">
+<h2 id="org0b5732f"><span class="section-number-2">1.</span> C♯ 语言</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 222
@@ -35,7 +35,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-08-30</p>
+<p class="date">Created: 2023-09-05</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
