--- a/html/skills/windows.html
+++ b/html/skills/windows.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-08-31 -->
+<!-- 2023-09-05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Windows</title>
@@ -22,15 +22,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf227774">1. 快捷键</a></li>
-<li><a href="#org713d9b4">2. 命令提示符</a></li>
+<li><a href="#org1f577ec">1. 快捷键</a></li>
+<li><a href="#orgcedba03">2. 命令提示符</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orgf227774" class="outline-2">
-<h2 id="orgf227774"><span class="section-number-2">1.</span> 快捷键</h2>
+<section id="outline-container-org1f577ec" class="outline-2">
+<h2 id="org1f577ec"><span class="section-number-2">1.</span> 快捷键</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 全局：
@@ -51,8 +51,8 @@
 </div>
 </section>
 
-<section id="outline-container-org713d9b4" class="outline-2">
-<h2 id="org713d9b4"><span class="section-number-2">2.</span> 命令提示符</h2>
+<section id="outline-container-orgcedba03" class="outline-2">
+<h2 id="orgcedba03"><span class="section-number-2">2.</span> 命令提示符</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 打开方式:
@@ -110,7 +110,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-08-31</p>
+<p class="date">Created: 2023-09-05</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
