best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -36,7 +36,7 @@
 <h3 id="org7cf233b"><span class="section-number-3">1.1.</span> 基本规则</h3>
 <div class="outline-text-3" id="text-1-1">
 
-<figure id="org44c329b">
+<figure id="orgddcc29c">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png">
 
 </figure>
