best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -30,8 +30,12 @@
 <section id="outline-container-org7cf233b" class="outline-2">
 <h2 id="org7cf233b"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+人有人的语言，电脑有电脑的语言。编译器是两者的桥梁。
+</p>
 
-<figure id="org4b0c599">
+
+<figure id="orgc8ac593">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
