best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -31,11 +31,11 @@
 <h2 id="org7cf233b"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-人有人的语言，电脑有电脑的语言。编译器是两者的桥梁。
+人有人的语言，电脑有电脑的语言。连接两者的是 <b>编译器</b> 。
 </p>
 
 
-<figure id="orgc8ac593">
+<figure id="orge386185">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
