--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -24,6 +24,10 @@
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
 </ul></li>
+<li>misc
+<ul class="org-ul">
+<li><a href="misc/report-192.html">Report-192</a></li>
+</ul></li>
 <li>skills
 <ul class="org-ul">
 <li><a href="skills/windows.html">Windows</a></li>
