best_try_and_best_chance

--- a/html/misc/report-192.html
+++ b/html/misc/report-192.html
@@ -200,13 +200,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge8afc9e">1. Score Record</a></li>
+<li><a href="#org77bf8b0">1. Records</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orge8afc9e" class="outline-2">
-<h2 id="orge8afc9e"><span class="section-number-2">1.</span> Score Record</h2>
+<section id="outline-container-org77bf8b0" class="outline-2">
+<h2 id="org77bf8b0"><span class="section-number-2">1.</span> Records</h2>
 <div class="outline-text-2" id="text-1">
 <table>
 
@@ -216,6 +216,12 @@
 
 <col  class="org-right">
 </colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">姓名</th>
+<th scope="col" class="org-right">hello.txt</th>
+</tr>
+</thead>
 <tbody>
 <tr>
 <td class="org-left">李吉</td>
