best_try_and_best_chance

--- a/html/misc/report-192.html
+++ b/html/misc/report-192.html
@@ -200,13 +200,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org77bf8b0">1. Records</a></li>
+<li><a href="#orgcaa9d95">1. Records</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org77bf8b0" class="outline-2">
-<h2 id="org77bf8b0"><span class="section-number-2">1.</span> Records</h2>
+<section id="outline-container-orgcaa9d95" class="outline-2">
+<h2 id="orgcaa9d95"><span class="section-number-2">1.</span> Records</h2>
 <div class="outline-text-2" id="text-1">
 <table>
 
