--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -20,13 +20,13 @@
 <h1 class="title">Sitemap for project _notes_yao63</h1>
 </header><ul class="org-ul">
 <li><a href="index.html">AIT.NET</a></li>
+<li>Misc
+<ul class="org-ul">
+<li><a href="Misc/report-192.html">Report-192</a></li>
+</ul></li>
 <li>dotnet
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
-</ul></li>
-<li>misc
-<ul class="org-ul">
-<li><a href="misc/report-192.html">Report-192</a></li>
 </ul></li>
 <li>skills
 <ul class="org-ul">
