--- a/html/index.html
+++ b/html/index.html
@@ -44,13 +44,13 @@
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
+<li>Misc
+<ul class="org-ul">
+<li><a href="Misc/report-192.html">Report-192</a></li>
+</ul></li>
 <li>dotnet
 <ul class="org-ul">
 <li><a href="dotnet/1-csharp.html">1-csharp</a></li>
-</ul></li>
-<li>misc
-<ul class="org-ul">
-<li><a href="misc/report-192.html">Report-192</a></li>
 </ul></li>
 <li>skills
 <ul class="org-ul">
