best_try_and_best_chance

--- a/html/index.html
+++ b/html/index.html
@@ -44,9 +44,9 @@
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
 <ul class="org-ul">
-<li>Misc
+<li>ccc
 <ul class="org-ul">
-<li><a href="Misc/report-192.html">Report-192</a></li>
+<li><a href="ccc/report-192.html">Report-192</a></li>
 </ul></li>
 <li>dotnet
 <ul class="org-ul">
