--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -20,9 +20,9 @@
 <h1 class="title">Sitemap for project _notes_yao63</h1>
 </header><ul class="org-ul">
 <li><a href="index.html">AIT.NET</a></li>
-<li>Misc
+<li>ccc
 <ul class="org-ul">
-<li><a href="Misc/report-192.html">Report-192</a></li>
+<li><a href="ccc/report-192.html">Report-192</a></li>
 </ul></li>
 <li>dotnet
 <ul class="org-ul">
