best_try_and_best_chance

--- a/html/ccc/report-192.html
+++ b/html/ccc/report-192.html
@@ -265,7 +265,7 @@
 
 <tr>
 <td class="org-left">余海中</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">3</td>
 </tr>
 
 <tr>
@@ -325,7 +325,7 @@
 
 <tr>
 <td class="org-left">谭鑫</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">4</td>
 </tr>
 
 <tr>
