best_try_and_best_chance

--- a/html/ccc/report-192.html
+++ b/html/ccc/report-192.html
@@ -385,7 +385,7 @@
 
 <tr>
 <td class="org-left">麦天河</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -435,7 +435,7 @@
 
 <tr>
 <td class="org-left">高旻昱</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 </tr>
 </tbody>
 </table>
