best_try_and_best_chance

--- a/html/ccc/report-192.html
+++ b/html/ccc/report-192.html
@@ -241,12 +241,12 @@
 
 <tr>
 <td class="org-left">王海波</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
 </tr>
 
 <tr>
 <td class="org-left">何华为</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
@@ -256,7 +256,7 @@
 
 <tr>
 <td class="org-left">许焕圣</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 </tr>
 
 <tr>
