best_try_and_best_chance

--- a/html/.sitemap.html
+++ b/html/.sitemap.html
@@ -22,7 +22,7 @@
 <li><a href="index.html">AIT.NET</a></li>
 <li>ccc
 <ul class="org-ul">
-<li><a href="ccc/report-192.html">Report-192</a></li>
+<li><a href="ccc/reports_192.html">Report of 192</a></li>
 </ul></li>
 <li>dotnet
 <ul class="org-ul">
