--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
 <ul class="org-ul">
 <li>ccc
 <ul class="org-ul">
-<li><a href="ccc/report-192.html">Report-192</a></li>
+<li><a href="ccc/reports_192.html">Report of 192</a></li>
 </ul></li>
 <li>dotnet
 <ul class="org-ul">
