best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -58,7 +58,7 @@
 
 <tr>
 <td class="org-left">肖义珥</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">10</td>
 </tr>
 
 <tr>
@@ -218,7 +218,7 @@
 
 <tr>
 <td class="org-left">刘广鸿</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">11</td>
 </tr>
 
 <tr>
