--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -117,6 +117,11 @@
 </tr>
 
 <tr>
+<td class="org-left">张甘霖</td>
+<td class="org-right">15</td>
+</tr>
+
+<tr>
 <td class="org-left">叶宇</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -183,11 +188,6 @@
 
 <tr>
 <td class="org-left">谢晓中</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">张甘霖</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
