best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -127,6 +127,11 @@
 </tr>
 
 <tr>
+<td class="org-left">段京文</td>
+<td class="org-right">17</td>
+</tr>
+
+<tr>
 <td class="org-left">叶宇</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -168,11 +173,6 @@
 
 <tr>
 <td class="org-left">周永久</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">段京文</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
