best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -132,12 +132,17 @@
 </tr>
 
 <tr>
-<td class="org-left">叶宇</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">古远东</td>
+<td class="org-right">18</td>
 </tr>
 
 <tr>
-<td class="org-left">古远东</td>
+<td class="org-left">黄可彬</td>
+<td class="org-right">19</td>
+</tr>
+
+<tr>
+<td class="org-left">叶宇</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -238,11 +243,6 @@
 
 <tr>
 <td class="org-left">李耀武</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">黄可彬</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
